--- a/app.html
+++ b/app.html
@@ -11,9 +11,9 @@
 
 		<div class="painel">
 			<div class="vidas">
-				<img src="imagens/coracao_vazio.png">
-				<img src="imagens/coracao_cheio.png">
-				<img src="imagens/coracao_cheio.png">
+				<img id="v1" src="imagens/coracao_cheio.png">
+				<img id="v2" src="imagens/coracao_cheio.png">
+				<img id="v3" src="imagens/coracao_cheio.png">
 			</div>
 			
 			<div class="cronometro">
@@ -26,7 +26,7 @@
 
 			setInterval(function() {
 				posicaoRandomica()
-			}, 1000)
+			}, 2000)
 		</script>
 
 	</body>
